K8S-Menifest/Ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-notes-ingree
  namespace: nginx
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
  #labels:
  #name: myingress
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: /nginx
        backend:
          service:
            name: nginx-service
            port:
              number: 80
      - pathType: Prefix
        path: /app
        backend:
          service:
            name: note-app-servcie
            port:
              number: 8000
